# NetCore

./: .gitignore  CMakeLists.txt  nob.c
examples/: http.cpp  main.cpp  ws.cpp  ws_sup.cpp
include/netcore/: beast_http_transport.hpp  curl_http_transport.hpp  err.hpp  http_client.hpp  http_transport.hpp  http_types.hpp  log.hpp  log_sinks.hpp  logging_http_transport.hpp  mock_http_transport.hpp  netcore.hpp  rate_limit.hpp  rate_limited_http_transport.hpp  transport_factory.hpp  url.hpp  version.hpp  webhook_client.hpp  ws_decompress.hpp  ws_keepalive.hpp  ws_reconnect.hpp  ws_session.hpp  ws_supervisor.hpp  ws_transport.hpp
src/: beast_http_transport.cpp  beast_http_transport.hpp  beast_ws_transport.cpp  beast_ws_transport.hpp  curl_http_transport.cpp  curl_http_transport.hpp  err.cpp  http_client.cpp  log.cpp  log_sinks.cpp  logging_http_transport.cpp  logging_http_transport.hpp  rate_limit.cpp  rate_limited_http_transport.cpp  redirecting_transport.cpp  redirecting_transport.hpp  retrying_transport.cpp  retrying_transport.hpp  transport_factory.cpp  url.cpp  webhook_client.cpp  ws_decompress.cpp  ws_session.cpp  ws_supervisor.cpp
tests/: http_client_tests.cpp  http_smoke.cpp  ws_smoke.cpp
